车牌尺寸识别

--- a/OpenCVCarBoardDetect/CMakeLists.txt
+++ b/OpenCVCarBoardDetect/CMakeLists.txt
@@ -3,4 +3,17 @@ project(OpenCVCarBoardDetect)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(OpenCVCarBoardDetect main.cpp)
+find_package(OpenCV REQUIRED)
+
+include_directories("/usr/local/Cellar/opencv/4.1.0_2/include/opencv4")
+link_libraries("/usr/local/Cellar/opencv/4.1.0_2/lib")
+
+
+add_executable(OpenCVCarBoardDetect main.cpp PlateRecognize.cpp PlateRecognize.h common.h PlateLocate.cpp PlateLocate.h SobelLocate.cpp SobelLocate.h)
+
+target_link_libraries(OpenCVCarBoardDetect
+        opencv_videoio
+        opencv_core
+        opencv_highgui
+        opencv_video
+        opencv_objdetect)
