加入颜色定位方式

--- a/OpenCVCarBoardDetect/CMakeLists.txt
+++ b/OpenCVCarBoardDetect/CMakeLists.txt
@@ -8,7 +8,9 @@ find_package(OpenCV REQUIRED)
 include_directories("/usr/local/Cellar/opencv/4.1.2/include/opencv4")
 #link_libraries("/usr/local/Cellar/opencv/4.1.2/lib")
 
-add_executable(OpenCVCarBoardDetect main.cpp PlateRecognize.cpp PlateRecognize.h common.h PlateLocate.cpp PlateLocate.h SobelLocate.cpp SobelLocate.h)
+file(GLOB src_files *.cpp)
+
+add_executable(OpenCVCarBoardDetect ${src_files})
 
 target_link_libraries(OpenCVCarBoardDetect
         opencv_videoio
